fixed z-index particles

--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ canvas {
 	background-repeat: no-repeat; 
 	background-size: cover; 
 	background-position: 100% 100%;
+  z-index: -1;
 }
 
 
